--- a/_posts/2022-09-23-down_under_ctf_2022.md
+++ b/_posts/2022-09-23-down_under_ctf_2022.md
@@ -1,12 +1,20 @@
 ---
-title: Writeup DownUnderCTF 2022
+title: "Writeup DownUnderCTF 2022 - RE"
 author: vietzettt
 date: 2022-09-23
 category: ctf
 layout: post
 ---
-# test1
 
-# test2
-
-# test3
+Nguồn ở đây nhá mọi người: ::1
+## Task 1: source provided 
+jạkák fjká jfka kf
+akfj kàk ljkalj kfj kak fjkạ
+akfjkạ kfk ạ
+## Task 2: Legit App Not Ransomware 
+## Task 3: Clicky 
+## Task 4: js lock 
+## Task 5: ezpz-rev 
+## Task 6: xva 
+## Task 7: click the flag 
+## Task 8: artisan 
