up writeup downunder task 2 3 4 and fix format code

--- a/_posts/2022/2022-09-23-down_under_ctf_2022.md
+++ b/_posts/2022/2022-09-23-down_under_ctf_2022.md
@@ -14,7 +14,7 @@ Một giải CTF lần đầu tham gia của tôi và team tôi với những ki
 
 Sau đây tôi vào việc đây, nay thời tiết ở Nga như bao ngày í ì y lạnh)))🥶 à mà có lò sưởi thế là nóng lắm mn>> mà thôi gét gô🤪
 
-### Task 1: source provided (Solved)
+### 1: source provided (Solved)
 
 ![Ảnh mô tả nhiệm vụ 1](/src/2022/DownUnderCTF/source-provided/img/00_title.png)
 
@@ -112,7 +112,7 @@ Từ phân tích trên thì ta thấy rõ bài này sẽ yêu cầu ta nhập `i
 Với bài này chỉ sử dụng toán tử `xor, and, add` nên tôi sẽ đảo ngược lại quá trình nó với `c` là đầu vào và `print` kết quả nhận được.
 Và đây là source Python tôi code để tạo flag:
 
-```code
+```python
 c = [0xc4, 0xda, 0xc5, 0xdb, 0xce, 0x80, 0xf8, 0x3e, 0x82, 0xe8, 0xf7, 0x82, 0xef, 0xc0, 0xf3, 0x86, 0x89, 0xf0, 0xc7, 0xf9, 0xf7, 0x92, 0xca, 0x8c, 0xfb, 0xfc, 0xff, 0x89, 0xff, 0x93, 0xd1, 0xd7, 0x84, 0x80, 0x87, 0x9a, 0x9b, 0xd8, 0x97, 0x89, 0x94, 0xa6, 0x89, 0x9d, 0xdd, 0x94, 0x9a, 0xa7, 0xf3, 0xb2]
 
 flag = []
@@ -120,22 +120,304 @@ for i, x in enumerate(c):
     b = ((x ^ 0x42) - 0x42 - i) % 256
     flag.append(b)
 print(bytes(flag).decode())
-
 ```
 
 Và chạy nó ta nhận được flag: `DUCTF{r3v_is_3asy_1f_y0u_can_r34d_ass3mbly_r1ght?}`
 Và chúc mừng ta đã hoàn thành xong task đầu tiên nhá.
 
-### Task 2: Legit App Not Ransomware (Solved)
+### 2: Legit App Not Ransomware (Solved)
 
-### Task 3: Clicky (Solved)
+![Ảnh mô tả nhiệm vụ 2](/src/2022/DownUnderCTF/legit-app-not-ransomware/img/00_title.png)
 
-### Task 4: js lock (Unsolved)
+Kết quả tôi chạy thử chương trình:
 
-### Task 5: ezpz-rev (Unsolved)
+![run file](/src/2022/DownUnderCTF/legit-app-not-ransomware/img/01_run_file.png)
 
-### Task 6: xva (Unsolved)
+Ta nhận được kết quả là yêu cầu ta chạy trên nền tảng `.NET`, do đó ta có thể sử dụng các phầm mềm như dotPeek, ilspy, dnSpy,...
+Tôi sẽ chạy chương trình bằng dotPeek, tìm kiếm strings và các hàm, để xem hàm `main` ở đâu và thực hiện gì:
 
-### Task 7: click the flag (Unsolved)
+![2](/src/2022/DownUnderCTF/legit-app-not-ransomware/img/02.png)
 
-### Task 8: artisan (Unsolved)
+Dưới đây là code của toàn chương trình khi dotPeek giải cho ta:
+
+```c#
+using Microsoft.VisualBasic.CompilerServices;
+using System;
+using System.Collections.Generic;
+using System.IO;
+using System.Text;
+using System.Threading;
+
+namespace LegitAppNotRansomware
+{
+  [StandardModule]
+  internal sealed class Program
+  {
+    private static string a = "d3Jvbmdv";
+    private static string b = "aHR0cHM6Ly9iaXQubHkvM05SMkVvYg==";
+    private static string c = "OXdZV";
+    private static string d = "UkZWRFZF";
+    private static string e = "J1mM7";
+    private static string f = "elgyTjFZM1Z0WWpOeWZRPT0";
+    private static string g = "4n680y";
+    private static string h = "VHlwZSAhZmxhZyBpbiBkaXNjb3JkIGZvciB0aGUgU0VDUkVUIEVORElORw==";
+    private static string i = "SG93IG1hbnkgdGltZXMgd2lsbCB5b3UgdXNlIFJTQSBpbiB0aGUgd29ya3BsYWNlPyA6RA==";
+    private static string j = "KHNvbWUgb2YgdGhlc2UgZG9uJ3Qgd29yaywganVzdCBpZ25vcmUuLi5vciBtYXliZSBkb24ndD8p";
+    private static string l = "SGF2ZSB5b3Ugc3R1ZGllZCBmb3IgT1NDUCB0b2RheT8=";
+    private static string m = "aHR0cHM6Ly9iaXQubHkvM01sdmpSOQ==";
+    private static string n = "DUCTF{";
+    private static string o = "no}";
+    private static string p = "4n6grl";
+    private static string q = "RUFUIFNMRUVQIENURiBSRVBFQVQ=";
+    private static string r = "UmVkIFRlYW0gPiBCbHVlIFRlYW0=";
+    private static string s = "U3RhbmQgYmFjayBldmVyeW9uZSwgSSdtIGNlcnRpZmllZCE=";
+    private static string t = "zR4WTE4d2NsOWpNREJzWDJG";
+    private static string u = "WjdaREZrWDNrd2RW";
+    private static string v = "SVNPMjcwMDEgU0FWRSBVUw==";
+    private static string w = "Qmx1ZSBUZWFtID4gUmVkIFRlYW0=";
+    private static string x = "Z2hpZHJhIHNhdmUgbWUh";
+    private static string y = "QXJlIHlvdSBkZWNvZGluZyBhbGwgb2YgdGhlc2U/IFdoYXQgYSBjaGFtcCE=";
+    private static string z = "Password1";
+
+    [STAThread]
+    public static void Main(string[] args)
+    {
+      Console.WriteLine("");
+      Console.WriteLine(Program.DecodeMe("SEFIQSB5b3UgaGF2ZSBiZWVuIHRyaWNrZWQgYnkgbXkgMTMzNyBoYXh4MHIgc2tpbGxzIQ=="));
+      Console.WriteLine("");
+      Console.WriteLine(Program.DecodeMe("RW5jcnlwdGluZyA=") + Environment.UserName + Program.DecodeMe("J3MgZmlsZXMgaW4uLi4="));
+      Thread.Sleep(1000);
+      Console.WriteLine("...5");
+      Thread.Sleep(1000);
+      Console.WriteLine("...4");
+      Thread.Sleep(1000);
+      Console.WriteLine("...3");
+      Thread.Sleep(1000);
+      Console.WriteLine("...2");
+      Thread.Sleep(1000);
+      Console.WriteLine("...1");
+      Thread.Sleep(1000);
+      List<string> stringList = Program.SearchForFiles("C:\\Users\\" + Environment.UserName, (string[]) new string[2]
+      {
+        (string) "*.png",
+        (string) "*.docx"
+      });
+      try
+      {
+        foreach (string str in stringList)
+        {
+          Console.WriteLine(str);
+          Thread.Sleep(10);
+        }
+      }
+      finally
+      {
+        List<string>.Enumerator enumerator;
+        enumerator.Dispose();
+      }
+      Console.WriteLine("");
+      Console.WriteLine(Program.DecodeMe("Li4uc28geW91IHdhbnQgdG8gZGVjcnlwdCB5b3VyIGZpbGVzPyBFbnRlciB0aGUgcGFzc3dvcmQ6IA=="));
+      Console.WriteLine("");
+      if (Operators.CompareString(Program.EncodeMe(Console.ReadLine()), Program.DecodeMe(string.Concat((string[]) new string[6]
+      {
+        (string) Program.d,
+        (string) Program.u,
+        (string) Program.c,
+        (string) Program.t,
+        (string) Program.f,
+        (string) "="
+      })), false) == 0)
+        Console.WriteLine(Program.DecodeMe("VGhhdCdzIGl0ISBUaGF0J3MgdGhlIGZsYWch"));
+      else
+        Console.WriteLine(Program.DecodeMe("V3JvbmcgcGFzc3dvcmQsIGxvb2tzIGxpa2UgeW91ciBmaWxlcyBhcmUgVE9BU1Q="));
+      Console.ReadLine();
+    }
+
+    public static List<string> SearchForFiles(string RootFolder, string[] FileFilter)
+    {
+      List<string> stringList = new List<string>();
+      Stack<string> stringStack = new Stack<string>();
+      stringStack.Push(RootFolder);
+      while (stringStack.Count > 0)
+      {
+        string str1 = stringStack.Pop();
+        try
+        {
+          string[] directories = Directory.GetDirectories(str1);
+          int index1 = 0;
+          while (index1 < directories.Length)
+          {
+            string str2 = directories[index1];
+            stringStack.Push(str2);
+            checked { ++index1; }
+          }
+          string[] strArray = FileFilter;
+          int index2 = 0;
+          while (index2 < strArray.Length)
+          {
+            string str3 = strArray[index2];
+            stringList.AddRange((IEnumerable<string>) Directory.GetFiles(str1, str3));
+            checked { ++index2; }
+          }
+        }
+        catch (Exception ex)
+        {
+          ProjectData.SetProjectError(ex);
+          ProjectData.ClearProjectError();
+        }
+      }
+      return stringList;
+    }
+
+    public static string EncodeMe(string input) => Convert.ToBase64String(Encoding.UTF8.GetBytes(input));
+
+    public static string DecodeMe(string input) => Encoding.UTF8.GetString(Convert.FromBase64String(input));
+  }
+}
+```
+
+Tôi thấy có hàm `DecodeMe` mở nó ra xem thì đây là hàm giải mã `base64`
+
+```c#
+    public static string DecodeMe(string input) => Encoding.UTF8.GetString(Convert.FromBase64String(input));
+```
+
+Do đó tôi sẽ giải mã các đoạn strings của chương trình xem logic của bài sẽ như nào. Thì tôi phát hiện có hàm `if` kiểm tra flag:
+
+```c#
+Console.WriteLine(Program.DecodeMe("...so you want to decrypt your files? Enter the password: ");
+Console.WriteLine("");
+if (Operators.CompareString(Program.EncodeMe(Console.ReadLine()), Program.DecodeMe(string.Concat((string[]) new string[6]
+{
+    (string) Program.d,
+    (string) Program.u,
+    (string) Program.c,
+    (string) Program.t,
+    (string) Program.f,
+    (string) "="
+})), false) == 0)
+    Console.WriteLine("That's it! That's the flag!");
+else
+    Console.WriteLine("Wrong password, looks like your files are TOAST");
+```
+
+Và thế là đã gần xong rồi, giờ chỉ cần nối các chuỗi `d,u,c,t,f,"="` rồi giải mã nó là ra flag:
+
+```shell
+$echo RFVDVEZ7ZDFkX3kwdV9wYW4xY18wcl9jMDBsX2FzX2N1Y3VtYjNyfQ== | base64 --decode
+```
+
+Nhận được flag: `DUCTF{d1d_y0u_pan1c_0r_c00l_as_cucumb3r}`🫡
+
+### 3: Clicky (Solved)
+
+![Ảnh mô tả nhiệm vụ 3](/src/2022/DownUnderCTF/clicky/img/00_title.png)
+
+Đến với thử thách này chạy thì ta nhận thấy thông báo cần cài .NET, chứng tỏ là chương trình chạy trên nền tảng .NET
+
+![01](/src/2022/DownUnderCTF/clicky/img/01_open.png)
+
+Thế thì ta tiếp tục mở bằng `dotPeek` và ta nhận được:
+
+```c#
+    private void PictureBox1_Click(object sender, EventArgs e)
+    {
+      if (this.PictureBox1.Size.Height == 1)
+      {
+        int num1 = (int) MessageBox.Show("Here's the link! https://bit.ly/3MfBhmD");
+      }
+      if (this.PictureBox1.Size.Height == 10)
+      {
+        this.Timer1.Stop();
+        this.lbBossFight.ForeColor = Color.Green;
+        int num2 = (int) MessageBox.Show(string.Concat((string[]) new string[8]
+        {
+          (string) "How did you do this?!?! ",
+          (string) this.Unscramble("UkZWRFZFWT0="),
+          (string) this.Unscramble(this.flag),
+          (string) this.Unscramble(this.Random_function(this.Label1.Text)),
+          (string) this.Unscramble(this.Random_function(this.Label2.Text)),
+          (string) this.Unscramble(this.Random_function(this.Label3.Text)),
+          (string) "_ZGVhZGIzM2ZjYWZl",
+          (string) this.Unscramble(this.galf)
+        }));
+      }
+      if (this.PictureBox1.Size.Height == 75)
+      {
+        int num3 = (int) MessageBox.Show("You clicked me again! [EUROBEAT INTENSIFIES]");
+        this.PictureBox1.Size = new Size(10, 10);
+        this.DUCTF.Interval = 69;
+        this.lbBossFight.Text = "00:00:00";
+        this.lbWaterLevel.ForeColor = Color.Green;
+      }
+      if (this.PictureBox1.Size.Height != 100)
+        return;
+      int num4 = (int) MessageBox.Show("You clicked me! Time to get a bit smaller and faster!");
+      this.PictureBox1.Size = new Size(75, 75);
+      this.DUCTF.Interval = 420;
+      this.lbWaterLevel.Text = "00:00:00";
+      this.lbTutorial.ForeColor = Color.Green;
+    }
+```
+
+Tôi thấy đoạn mã này đáng nghi ngờ nên tôi sẽ lần tìm theo đó. Click kiểm tra hàm `Unscramble` và cả hàm `Non_Random_function`:
+
+```c#
+public string Unscramble(string input) => this.Non_Random_function(Encoding.UTF8.GetString(Convert.FromBase64String(input)));
+public string Non_Random_function(string input) => Encoding.UTF8.GetString(Convert.FromBase64String(input));
+```
+
+vâng 2 hàm này đại loại là giải mã `base64` thông qua tham số truyền vào `input`. Ta đi vào hàm `Unscramble` tôi thấy nó dùng con trỏ this gọi hàm `Non_Random_function` -> `input` đầu vào của hàm `Unscramble` sẽ decode base64 2 lần.
+-> `UkZWRFZFWT0=` return sau khi gọi hàm: `DUCTF`:
+
+```shell
+$ echo UkZWRFZFWT0= | base64 --decode | base64 --decode
+DUCTF
+```
+
+Chắc là ta đi đúng đường rồi, tiếp tục thôi 🤪
+Tiếp theo là `this.flag` và `this.galf` tương tự nó là `{` và `}`.
+
+Ta đến với hàm `Random_function`:
+
+```c#
+public string Random_function(string input) => Encoding.UTF8.GetString(Convert.FromHexString(input));
+```
+
+Hàm này đơn giản chỉ là chuyển đổi từ hex sang chuỗi.
+Ta thấy các `Label1`, `Label2`, `Label3`:
+
+```c#
+this.Label1.Text = "576B64736131677A62485A6B55543039";
+this.Label2.Text = "57444E57656C70574F44303D";
+this.Label3.Text = "57565935565646575453383D";
+```
+
+Giờ tôi đi 3 đoạn string này lên **CyberChef** ta nhận được kết quả:
+
+![2](/src/2022/DownUnderCTF/clicky/img/02_decode_label.png)
+
+Và cơ bản là xong giờ ta chỉ gom vào là ta nhận được flag rồi:
+`DUCTF{did_you_use_a_TAS?_ZGVhZGIzM2ZjYWZl}`
+
+Vậy là xong challange 3 cũng khá dễ dàng nhé💀
+
+### 4: js lock (Unsolved)
+
+![Ảnh mô tả nhiệm vụ 4](/src/2022/DownUnderCTF/js-lock/img/00_title.png)
+
+### 5: ezpz-rev (Unsolved)
+
+![Ảnh mô tả nhiệm vụ 5](/src/2022/DownUnderCTF/ezpz-rev/img/00_title.png)
+
+### 6: xva (Unsolved)
+
+![Ảnh mô tả nhiệm vụ 6](/src/2022/DownUnderCTF/xva/img/00_title.png)
+
+### 7: click the flag (Unsolved)
+
+![Ảnh mô tả nhiệm vụ 7](/src/2022/DownUnderCTF/click-the-flag/img/00_title.png)
+
+### 8: artisan (Unsolved)
+
+![Ảnh mô tả nhiệm vụ 8](/src/2022/DownUnderCTF/artisan/img/00_title.png)
