up fix about, contact and write ups defcamp 2022

--- a/_posts/2022/2022-09-23-down_under_ctf_2022.md
+++ b/_posts/2022/2022-09-23-down_under_ctf_2022.md
@@ -1,5 +1,5 @@
 ---
-title: "Writeup DownUnderCTF 2022 - RE"
+title: "Writeup DownUnderCTF 2022"
 author: vietzettt
 date: 2022-09-23
 layout: post
@@ -402,7 +402,7 @@ Và cơ bản là xong giờ ta chỉ gom vào là ta nhận được flag rồi
 
 Vậy là xong challange 3 cũng khá dễ dàng nhé💀
 
-### 4: js lock (Unsolved)
+<!-- ### 4: js lock (Unsolved)
 
 ![Ảnh mô tả nhiệm vụ 4](/src/2022/DownUnderCTF/js-lock/img/00_title.png)
 
@@ -420,4 +420,4 @@ Vậy là xong challange 3 cũng khá dễ dàng nhé💀
 
 ### 8: artisan (Unsolved)
 
-![Ảnh mô tả nhiệm vụ 8](/src/2022/DownUnderCTF/artisan/img/00_title.png)
+![Ảnh mô tả nhiệm vụ 8](/src/2022/DownUnderCTF/artisan/img/00_title.png) -->
