--- a/_posts/2022/2022-09-30-sekai_ctf_2022.md
+++ b/_posts/2022/2022-09-30-sekai_ctf_2022.md
@@ -8,7 +8,7 @@ cover: /src/2022/SEKAICTF/00_title.svg #thêm ảnh bìa cho trang
 
 ---
 
-##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](/src/2022/SEKAICTF/)
+##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/2022/SEKAICTF/)
 <!-- chỗ này ta sẽ chèn link dẫn đến nguồn tổng nhé-->
 
 Giải này tôi chỉ giải được bài 1 thuiiii😪😥
