up task downctf js

--- a/_posts/2022/2022-09-23-down_under_ctf_2022.md
+++ b/_posts/2022/2022-09-23-down_under_ctf_2022.md
@@ -402,13 +402,244 @@ Và cơ bản là xong giờ ta chỉ gom vào là ta nhận được flag rồi
 
 Vậy là xong challange 3 cũng khá dễ dàng nhé💀
 
-<!-- ### 4: js lock (Unsolved)
+### 4: js lock (Unsolved)
 
 ![Ảnh mô tả nhiệm vụ 4](/src/2022/DownUnderCTF/js-lock/img/00_title.png)
 
-### 5: ezpz-rev (Unsolved)
+Với thử thách này là một thử thách liên quan đến `js` mở chương trình và phân tích một chút:🫡
+
+![lock show](/src/2022/DownUnderCTF/js-lock/img/01_lock_show.png)
+
+đây là lí do tôi không giải quyết được nhiệm vụ này là phân tích được các LOCK là gì????😥😪. Biến `LOCK` là một mảng lớn các số được lồng vào nhau.
+
+![show LOCK convert](/src/2022/DownUnderCTF/js-lock/img/03_show_LOCK_convert.png)
+
+Mở file này lên trình duyệt ta thấy giao diện có 3 nút `0` `1` `Unlock`, chắc hẳn là ta cần mở khóa rồi rồi sẽ nó ra `flag` cho mình.
+
+![show file](/src/2022/DownUnderCTF/js-lock/img/02_show_file_chome.png)
+
+Đọc tiếp file vừa mở để hiểu được cơ chế nhận `Flag`
+
+```html
+<html>
+    <body>
+        <script>
+.... // đây là biến LOCK vì nó lớn quá lên k chép vào
+
+const C = [62, 223, 233, 153, 37, 113, 79, 195, 9, 58, 83, 39, 245, 213, 253, 138, 225, 232, 123, 90, 8, 98, 105, 1, 31, 198, 67, 83, 41, 139, 118, 138, 252, 165, 214, 158, 116, 173, 174, 161, 6, 233, 37, 35, 86, 7, 108, 223, 97, 251, 2, 245, 129, 118, 227, 120, 26, 70, 40, 26, 183, 90, 172, 155]
+
+            function set_status(s) {
+                document.getElementById('status').innerHTML = s
+            }
+
+            function disable() {
+                document.getElementById('btn-0').disabled = true
+                document.getElementById('btn-1').disabled = true
+                document.getElementById('submit').disabled = true
+            }
+
+            function sha512(m) {
+                return crypto.subtle.digest('SHA-512', new TextEncoder('utf-8').encode(m))
+                    .then((b) => new Uint8Array(b))
+            }
+
+            const S = { current: 1, key: '', T: LOCK, idx: 0 }
+
+            function hit_0() { //khi nhấn 0 thì key sẽ cộng thêm '0' và kiểm tra kiểu của S.T và giá trị xác định của S.T tại index hiện tại
+                S.key += '0'
+                if(typeof S.T != 'object' || S.T[S.idx] == undefined) {
+                    set_status(`<div style="color: red">Pin ${S.current} is stuck!</div>`)
+                    disable()
+                } else {
+                    S.T = S.T[S.idx] // nếu tồn tại giá trị của S.T tại index thì S.T được gán giá trị của S.T tại index đó sau đó sẽ đặt lại giá trị của index = 0 
+                    S.idx = 0
+                    document.getElementById('current-attempt').innerText = S.key
+                }
+            }
+
+            function hit_1() { //khi nhấn 1 thì s.key += '1'; index của s sẽ tăng lên 1 
+                S.key += '1'
+                S.idx += 1
+                document.getElementById('current-attempt').innerText = S.key
+            }
+
+            function submit_pin() {
+                S.idx = 0 // gán giá trị cho index = 0
+                if(S.T === S.current) { // sẽ kiểm tra nếu giá trị mà nhấn hit_0 vừa xong mà bằng với giá trị s.current thì sẽ hiển thị đã unlockkkkkkk
+                    set_status(`<div style="color: green">Pin ${S.current} unlocked!</div>`)
+
+                    if(S.current == 1337) { // chuyển đến hàm nhận flag
+                        win()
+                    } else { // nếu không bằng 1337 thì current tăng lên 1 và tiếp tục .....
+                        S.current += 1
+                        document.getElementById("current-pin").innerText = S.current
+                        S.T = LOCK
+                    }
+                } else { // còn nếu không bằng thì sẽ dừng chương trình
+                    set_status(`<div style="color: red">Pin ${S.current} didn\'t unlock!</div>`)
+                    disable()
+                }
+            }
+
+            async function win() {
+                const K = await sha512(S.key) // K  = chuỗi của sha512 của s.key nhận được mà ta trải qua đủ 1337 lần unlock
+                const dec = []
+                for(var i = 0; i < 64; i++) {
+                    dec.push(String.fromCodePoint(C[i] ^ K[i])) // flag sẽ là kết quả của xor lần lượt từng bytes của K so với C tương ứng 
+                }
+                const flag = dec.join('')
+                set_status(flag)
+            }
+
+        </script>
+    </body>
+</html>
+
+```
+
+Biến `s` được sử dụng để theo dõi trạng thái của khóa và được sửa đổi bất cứ khi nào chúng ta nhấn một trong các nút
+
+Phải trải qua đủ **1337** lần unlock thì mới có flag (ban đầu current = 1, sau mỗi lần `submit_pin` thì sẽ được tăng 1 nếu pin đúng để mở màn).
+
+Cái khó của bài này là ta làm sao để `hit_0` và `hit_1` làm sao đi vào được mảng lớn lồng nhau của `LOCK` để biết được index của nó là gì rồi từ đó ta `hit_1` bấy nhiêu lần rồi `hit_0` để gán giá trị rồi `unlock` để so sánh trả kết quả.
+
+![show arr lock](/src/2022/DownUnderCTF/js-lock/img/04_show_lock_arr.png)
+
+Ta thấy các số từ 1 -> 1337 được nằm dải rác ở trong tất cả các số 0. Ta nghĩ về các hàm `hit_0` và `hit_1` chuyển động trong mảng lớn. `hit_1` đi qua phần tử tiếp thưo trong mảng, trong khi `hit_0` sẽ chuyển qua một cấp độ sâu hơn trong mảng. Để mở khóa mỗi pin thì chúng ta phải chuyển động `hit_1` và `hit_0` để di chuyển đến các số theo thứ tự từ 1 đến 1337.
+
+Dưới đây là ý tưởng của họ tải lên:
+
+```js
+set_status = console.log;
+
+const path_to_key = (path) => path.map(c => '1'.repeat(c) + '0').join('');
+const paths = Array(1337);
+
+function dft(s, path=[]) {
+  s.forEach((c, i) => {
+    const curPath = [...path, i];
+    if(typeof c === 'object') {
+      dft(c, curPath);
+    } else if(typeof c === 'number' && c !== 0) {
+      paths[c - 1] = path_to_key(curPath);
+    }
+  })
+}
+
+dft(LOCK);
+
+S.key = paths.join('');
+await win();
+```
+
+Chúng ta cùng phân tích nó để hiểu và thu nạp kiến thức nhé😁:
+
+- `map()`method được dùng khi bạn muốn thao tác trên 1 mảng và muốn trả về 1 mảng các giá trị thay đổi dựa trên giá trị của mảng đầu vào
+- `forEach()` method được dùng để lấy các phần tử trong mảng theo thứ tự và chuyển chúng đến hàm callback để xử lý. Vòng lặp trong forEach không thể dừng lại giữa chừng và số lần lặp sẽ luôn bằng với số phần tử có trong mảng ban đầu
+
+Dưới đây ta sẽ phân tích cách giải nó nhé:
+
+```python
+
+import sys
+sys.setrecursionlimit(2**22)
+
+from hashlib import sha512
+from json import loads
+from base64 import b64decode
+
+LOCK = loads(b64decode(open('./LOCK.b64', 'rb').read()).decode()) #tạo biến LOCK (chép chuỗi dài ôi dồi vào file mới có tên LOCK.b64)
+# vì LOCK đề bài cho bằng eval() -> nó mã hóa base64
+ct = bytes([62, 223, 233, 153, 37, 113, 79, 195, 9, 58, 83, 39, 245, 213, 253, 138, 225, 232, 123, 90, 8, 98, 105, 1, 31, 198, 67, 83, 41, 139, 118, 138, 252, 165, 214, 158, 116, 173, 174, 161, 6, 233, 37, 35, 86, 7, 108, 223, 97, 251, 2, 245, 129, 118, 227, 120, 26, 70, 40, 26, 183, 90, 172, 155]) #từ đề bài
+def find_key(T, k, path=''):
+    if T == k:
+        return path
+    if type(T) is list:
+        for i, t in enumerate(T):
+            r = find_key(t, k, path + '1'*i + '0')
+            if r:
+                return r
+
+def check_key(h, k):
+    T = LOCK
+    idx = 0
+    for i in h:
+        if i == '1':
+            idx += 1
+        if i == '0':
+            T = T[idx]
+            idx = 0
+    return T == k
+
+key = ''
+for k in range(1, 1338):
+    h = find_key(LOCK, k)
+    key += h
+    assert check_key(h, k)
+
+key = sha512(key.encode()).digest()
+flag = bytes([a ^ b for a, b in zip(ct, key)])
+print(flag.decode())
+
+```
+
+- `bytes()` in python - return các đối tượng byte là một chuỗi các số nguyên, không thể thay đổi, được khởi tạo size và dữ liệu cho trước, trong phạm vi 0 <= x < 256.
+  - **Cú pháp:**  `bytes([source[, encoding[, errors]]])`
+  - **source**: tự chọn
+  - **encoding**: tùy chọn, nếu nguồn là string thì đây là mã hóa của string đó
+  - **errors**: tùy chọn, nếu nguồn là string, hành động sẽ được thực hiện khi quá trình bị lỗi
+
+    ```python
+    # Ví dụ: Chuyển đổi string thành byte: 
+    string = "Học Python trên quantrimang.com thật vui."
+    #string với mã hóa 'utf-8'
+    mang = bytes(string, 'utf-8')
+    print(mang)
+    #Nếu in từng phần tử có trong `mang` thì sẽ là vị trí của string đó trong bảng asccii 2
+    ```
+
+    ```python
+    # Ví dụ: Tạo mảng số nguyên với size cho trước: 
+    size = 5
+    mang = bytes(size)
+    print(mang)
+    #b'x00x00x00x00x00'
+    ```
+
+- `bytearray()` in python trả về một mảng byte với kích thước cho trước và các giá trị khởi tạo
+
+- `enumerate()` in python thực sự có rất nhiều sức mạnh như:
+  - Hàm cho phép truy nhập vòng lặp lần lượt qua các thành phần của một collection trong khi nó vẫn giữ index của item hiện tại
+
+    ```python
+    names = ['Bob', 'Alice', 'Guido']
+    for index, value in enumerate(names):
+      print(f'{index}: {value}')
+    #output: 
+    #0: Bob
+    #1: Alice
+    #2: Guido
+    ```
+
+  - Thay đổi starting index
+
+    ```python
+    names = ['Bob', 'Alice', 'Guido']
+    for index, value in enumerate(names, 1):
+      print(f'{index}: {value}')
+    #output: 
+    #1: Bob
+    #2: Alice
+    #3: Guido
+    ```
+
+Thế thôi vậy giờ qua file giải bằng python và nhận được flag: `DUCTF{s3arch1ng_thr0ugh_an_arr4y_1s_n0t_th4t_h4rd_ab894d8dfea17}`. Vâng nói chung thì đọc code thì khó khăn mỗi đoạn đi sâu vào mảng lớn 😪😪😪
+
+<!-- ### 5: ezpz-rev (Unsolved)
 
 ![Ảnh mô tả nhiệm vụ 5](/src/2022/DownUnderCTF/ezpz-rev/img/00_title.png)
+
+`setz cl` - đặt byte cl thành 1 nếu cờ Zero (ZF) được đặt, ngược lại đặt toán hạng thành 0.
 
 ### 6: xva (Unsolved)
 
