--- a/_posts/2022/2022-09-30-defcamp_ctf_2022.md
+++ b/_posts/2022/2022-09-30-defcamp_ctf_2022.md
@@ -1,15 +1,14 @@
 ---
-title: Writeup DefCamp 2022 #Tiêu đề hiện thị trên trang
+title: Writeup DefCamp 2022
 author: vietzettt
-date:  2022-09-30 #Ngày tạo
+date:  2022-09-30 
 layout: post
-cover: /src/2022/DefCampCTF/00_cover.png  #thêm ảnh bìa cho trang 
+cover: /src/2022/DefCampCTF/00_cover.png  
 ---
 
 ---
 
-##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/2022/DefCampCTF)
-<!-- chỗ này ta sẽ chèn link dẫn đến nguồn tổng nhé-->
+##### **Nguồn ở đây nhá các bạn:** [💀**👆👆👆**💀](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/2022/DefCampCTF)
 
 Chào mừng bạn đã quay trở lại với 1 vài bài RE thú vị và khá đơn giản của giải mà phải nói là tôi tham gia ngẫu hứng thui 😁. Không dài dòng nữa vào việc thôi.
 
