--- a/_posts/2022/2022-09-30-sekai_ctf_2022.md
+++ b/_posts/2022/2022-09-30-sekai_ctf_2022.md
@@ -1,22 +1,16 @@
 ---
-title: Writeup SEKAI CTF 2022 #Tiêu đề hiện thị trên trang
+title: Writeup SEKAI CTF 2022 
 author: vietzettt
-date: 2022-09-30 #Ngày tạo
+date: 2022-09-30 
 layout: post
-cover: /src/2022/SEKAICTF/00_title.svg #thêm ảnh bìa cho trang 
+cover: /src/2022/SEKAICTF/00_title.svg
 ---
 
 ---
 
-##### **Nguồn ở đây nhá các bạn:** [💀**Nhấp em đi**👆](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/2022/SEKAICTF/)
-<!-- chỗ này ta sẽ chèn link dẫn đến nguồn tổng nhé-->
+##### **Nguồn ở đây nhá các bạn:** [💀**👆👆👆**💀](https://github.com/vietzettt/vietzettt.github.io/tree/main/src/2022/SEKAICTF/)
 
 Giải này tôi chỉ giải được bài 1 thuiiii😪😥
 
 ### 1: Matrix_Lab_1 (Solved)
 
-<!--![]() chèn img tự động căn giữa -->
-
-<!-- ```code
-``` -->
-<!-- chèn code vào pass nhá-->
